--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "index.js",
   "dependencies": {
     "axios": "^0.19.0",
+    "devextreme": "^19.1.4",
+    "devextreme-react": "^19.1.4",
+    "jquery": "^1.9.1",
     "react": "^16.8.6",
+    "react-contexify": "^4.1.1",
     "react-dom": "^16.8.6",
     "react-editable-select": "^1.0.0",
     "react-router-dom": "^5.0.1",
